# property-pal-scraper

./: .env.example  .gitignore  Makefile  README.md  fix_ratings.py  main.py  pyproject.toml  requirements.txt  run_scraper.py  scrapy.cfg  setup.sh  test_geocoding.py  urls.json
data/cache/: geocoding_cache.json
propertypal_scraper/: geocoding.py  items.py  middlewares.py  perplexity_rating.py  pipelines.py  settings.py
propertypal_scraper/spiders/: property_spider.py
webapp/: eslint.config.mjs  package-lock.json  package.json
webapp/public/: demo-data.json
webapp/src/app/: layout.tsx  page.tsx
webapp/src/components/: AppShell.tsx  DashboardView.tsx  DemoBanner.tsx  DistanceDistChart.tsx  FilterSidebar.tsx  Header.tsx  ListView.tsx  MapView.tsx  PriceDistChart.tsx  PropertyCard.tsx  PropertyCardGrid.tsx  PropertyDataTable.tsx  PropertyDetailSheet.tsx  PropertyList.tsx  PropertyMap.tsx  ScoreDistChart.tsx  StatsCards.tsx
webapp/src/components/ui/: sheet.tsx
webapp/src/lib/: dataLoader.ts  formatters.ts  priorityAlgorithm.ts
webapp/src/types/: property.ts
